fixed text overflow on contact page

--- a/css/general-layout.css
+++ b/css/general-layout.css
@@ -320,4 +320,8 @@ html, body {
 		font-size: 30pt;
 		min-width: 250px;
 	}
+
+	#contactPageContainer .pageMiniHeader {
+		font-size: 20pt;
+	}
 }
